# academic-agent-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: mcp-agent-matrix.md
scripts/: install.py
skills/ars/: README.md  source
src/academic_agent_toolkit/: __main__.py  branding.py  cli.py  config.py  installer.py  setup_keys.py  theme.py  tui.py  ui.py
